# OctoPanel-Daemon

./: LICENSE  README.md
crates/client/: Cargo.toml
crates/client/src/: constants.rs  dockerhandle.rs  logger.rs  logging.rs  main.rs  server.rs  systemhandle.rs
crates/environment/: Cargo.toml
crates/environment/src/: docker.rs  lib.rs  system.rs
crates/environment/src/docker/: containers.rs  mod.rs
crates/remote/: Cargo.toml  build.rs
crates/remote/proto/: docker.proto  sysstats.proto
crates/remote/src/: lib.rs
crates/sftp/: Cargo.toml
crates/sftp/src/: lib.rs
