[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
colored = "2"
tracing = "0.1.23"
tracing-subscriber = "0.2"

remote = { path = "../remote" }
environment = { path = "../environment"}