[package]
name = "environment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.12.0"
lazy_static = "1.4.0"
sysinfo = "0.24.5"
tracing = "0.1.23"
futures = "0.3.21"

remote = { path = "../remote"}